# Minesweeper

Minesweeper/: CMakeLists.txt
build-Minesweeper-Desktop_x86_windows_msvc2022_pe_64bit-Debug/: CMakeCache.txt  Minesweeper.ilk  build.ninja  cmake_install.cmake  highscores.txt  replay.txt
